Make cards fixed width, push to new row if overflow

--- a/frontend/global.css
+++ b/frontend/global.css
@@ -54,7 +54,8 @@ html, body, #root {
 
 .missioncontrol-card {
     cursor: pointer;
-    width: 300px;
+    width: 208px;
+    height: 200px;
 }
 
 .missioncontrol-card .card-body {
